-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.8.0
-
-
1934119c427078be2ac4e39bf2ba039429a78984 (qt-creator/qt-creator/4.8)
- Create a library project in QtCreator
- add CONFIG += unversioned_libname to the pro file
- add target.files = lib$${TARGET}.so target.path = /usr/lib INSTALLS += target to the pro file
- select a kit which needs deployment like Boot2Qt or QNX
- open the Projects -> Run Settings -> Deployment
Result: It shows the versioned libraries for deployment
Expected result: It would show only lib$${TARGET}.so as it is printed in message($${target.files})
Workaround: tick the 'Ignore missing files' checkbox so the deployment will not fail
| For Gerrit Dashboard: QTCREATORBUG-21687 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247912,2 | QmakeProjectManager: Consider unversioned_libname CONFIG value | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |