QmakeProjectManager: Consider unversioned_libname CONFIG value

... when calculating the installation targets.

Fixes: QTCREATORBUG-21687
Change-Id: Ie56ce8b8f21d4ee8ddde983eb3731c5ce5ad0693
Reviewed-by: Karim Pinter <karim.pinter@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>